Fix alignment of container with hover

--- a/style.css
+++ b/style.css
@@ -299,6 +299,7 @@ section h3 {
 
 .container {
     padding: 15px;
+    margin-left: -15px;
 }
 
 .container:hover {
